<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Picdora Dialog -->
    <string name="dialog_default_positive">Ok</string>
    <string name="dialog_default_negative">Cancel</string>
    <string name="dialog_default_title">Alert</string>
    <string name="dialog_default_message">Alert message</string>
    <string name="app_name">Picdora</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_channel">Create Channel</string>
    <string name="action_refresh_images">Refresh Images</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_channel_creation">New Channel</string>
    <string name="title_activity_channel_detail">Channel</string>
    <string name="title_activity_channel_selection">Channels</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="title_activity_resume">Resume</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_collections">Collections</string>
    <string name="title_activity_likes">Likes</string>
    <string name="title_activity_launch">Picdora</string>

    <!-- Channel Selection -->
    <string name="channel_selection_empty">You don\'t have any channels yet!</string>
    <string name="channel_create_button">New Channel</string>

    <!-- Channel Detail -->
    <string name="action_delete_channel">Delete Channel</string>
    <string name="action_play_channel">Play Channel</string>
    <string name="channel_detail_delete_dialog_title">Delete Channel?</string>
    <string name="channel_detail_delete_dialog_message">Are you sure you want to delete this channel?</string>
    <string name="channel_detail_delete_dialog_positive">Delete</string>
    <string name="channel_detail_delete_dialog_negative">Cancel</string>
    <string name="channel_detail_gif_setting_title">Show GIFs?:</string>
    <string name="channel_detail_gif_setting_yes">Yes</string>
    <string name="channel_detail_gif_setting_no">No</string>
    <string name="channel_detail_gif_setting_only">Exclusively</string>
    <string name="channel_detail_low_image_count_warning">Warning, these channel settings only match %1$d images</string>
    <string name="channel_detail_no_image_count_warning">Warning, these channel settings don\'t match any images</string>
    <string name="channel_detail_change_name_button">Edit Name</string>
    <string name="channel_detail_change_name_taken_error">There\'s already a channel called %1$s!</string>
    <string name="channel_detail_change_categories_button">Categories</string>
    <string name="channel_detail_change_categories_dialog_positive">Set Categories</string>
    <string name="channel_detail_change_categories_empty_dialog_message">You must select at least one category for this channel!</string>
    <string name="channel_detail_change_categories_empty_dialog_title">No Categories Selected</string>
    <string name="channel_detail_created_at">Created: %1$s</string>
    <string name="channel_detail_last_viewed">Last Viewed: %1$s</string>
    <string name="channel_detail_images_seen">Images Seen: %1$d</string>
    <string name="channel_detail_name_dialog_positive">Change Name</string>
    <string name="channel_detail_name_dialog_title">Change Channel Name</string>

    <!-- Satellite Menu -->
    <string name="sat_menu_main">Menu</string>

    <!-- Channel View Activity -->
    <string name="channel_view_report_dialog_title">Report image?</string>
    <string name="channel_view_report_dialog_message">Is this image totally out of place? Report it to us and we\'ll get it sorted out!</string>
    <string name="channel_view_report_dialog_positive_button">Report</string>
    <string name="channel_view_star_dialog_title">Add to collection</string>
    <string name="channel_view_star_dialog_message">Add this image to your collection?</string>
    <string name="channel_view_star_dialog_positive_button">Add</string>
    <string name="channel_view_data_warning_title">Data Warning</string>
    <string name="channel_view_data_warning_message">We\'ve noticed you\'re using a mobile network - Picdora uses lots of data for its images, so be careful!</string>
    <string name="channel_view_data_warning_position_button">Thanks, I\'ve got it</string>

    <!-- Gallery Fragment -->
    <string name="gallery_size_spinner">Image Size</string>
    <string name="gallery_cab_download">Download</string>
    <string name="gallery_download_start_alert_singular">Downloading image</string>
    <string name="gallery_download_start_alert_multiple">Downloading %1$d images</string>
    <string name="gallery_download_progress"> %1$d of %2$d images downloaded</string>
    <string name="gallery_download_failure">Error downloading images</string>
    <string name="gallery_cab_all">Select All</string>
    <string name="gallery_cab_delete">Delete</string>
    <string name="gallery_delete_confirmation_title">Delete Selection?</string>
    <string name="gallery_delete_confirmation_message">Are you sure you want to delete the selected images?</string>
    <string name="gallery_delete_confirmation_positive">Delete</string>
    <string name="gallery_cab_share">Share</string>

    <!-- Selection Fragment -->
    <string name="selection_cab_all">Select All</string>
    <string name="selection_cab_delete">Delete</string>
    <string name="selection_action_new">Create</string>
    <string name="selection_button_create_new">Create</string>
    <string name="selection_delete_confirmation_title">Delete Selection?</string>
    <string name="selection_delete_confirmation_message">Are you sure you want to delete the selected items?</string>
    <string name="selection_delete_confirmation_positive">Delete</string>

    <!-- Likes Contextual Menu -->
    <string name="likes_menu_star">Add to collection</string>

    <!-- Likes Menu -->
    <string name="likes_channel_spinner">Channel Selection</string>
    <string name="likes_channel_spinner_value_all">All Channels</string>

    <!-- Collections -->
    <string name="action_new_collection">Create Collection</string>
    <string name="collections_button_create_new">Create Collection</string>
    <string name="collections_empty_message">You haven\'t created any collections yet!</string>
    <string name="collections_create_dialog_title">New Collection</string>
    <string name="collections_create_dialog_hint">Collection Name</string>
    <string name="collections_create_dialog_positive">Create</string>
    <string name="collections_create_error_dialog_try_again">Try Again</string>
    <string name="collections_create_error_dialog_title">Error</string>
    <string name="collections_selection_dialog_positive">New Collection</string>
    <string name="collections_selection_dialog_title">Choose a collection</string>
    <string name="collection_no_images">You haven\'t added any images to this collection yet!</string>
    <string name="collections_add_to_collection">Add to collection</string>

</resources>