<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:picdora="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="50"
        android:title="@string/gallery_cab_delete"
        picdora:showAsAction="ifRoom"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/gallery_cab_share"
        android:orderInCategory="48"
        picdora:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/gallery_cab_all"
        android:orderInCategory="49"
        picdora:showAsAction="ifRoom"/>

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_action_download"
        android:title="@string/gallery_cab_download"
        android:orderInCategory="1"
        picdora:showAsAction="ifRoom"/>

</menu>
